[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Weapons/RomanCandle.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.727273 ), 0.0, 0.644156, 0, 0, Vector2( 0.290323, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.01948, 0.0, 0, 0 ]

[node name="RomanCandle" type="Node2D"]
script = ExtResource( 1 )

[node name="SpritePoly" type="Polygon2D" parent="."]
position = Vector2( -3, 0 )
color = Color( 0.901961, 0.466667, 0, 1 )
polygon = PoolVector2Array( -7, -5, -9, 0, -7, 5, 39, 5, 37, 2, 37, -2, 39, -5 )

[node name="Polygon2D" type="Polygon2D" parent="SpritePoly"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D2" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 6, 0 )
color = Color( 1, 0.866667, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D3" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 12, 0 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D4" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 18, 0 )
color = Color( 1, 0.866667, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D5" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 24, 0 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D6" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 30, 0 )
color = Color( 1, 0.866667, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="Polygon2D7" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 36, 0 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -7, -5, -4, 5, -1, 5, -4, -5 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 44, 0 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="CheckArea" type="Area2D" parent="ShootPoint"]

[node name="TrajectoryLine" type="Line2D" parent="."]
z_index = -5
width = 8.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )

[connection signal="shoot_signal" from="." to="." method="shoot_helper"]
